# langgraph-agent-comparison

./: .env.example  .gitignore  PLAN.md  README.md  agent.ipynb  benchmark.py  deep_agent.ipynb  langgraph.json  oh_benchmark.py  oh_deep_agent.ipynb  oh_structured.ipynb  oh_tool_helper.py  pyproject.toml
.claude/: settings.local.json
agent/: __init__.py  db.py  graph.py
oh_prompts/: deep_agent.j2  structured_agent.j2
